--- a/web_screen/app/build.gradle
+++ b/web_screen/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.bbogush.web_screen"
+        applicationId "com.ryan.screenshare"
         minSdkVersion 24
-        targetSdkVersion 29
-        versionCode 7
-        versionName "1.1.0"
+        targetSdkVersion 31
+        versionCode 3
+        versionName "1.1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -40,7 +40,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.1.0'
-    implementation 'com.google.android.gms:play-services-ads:19.1.0'
+//    implementation 'com.google.android.gms:play-services-ads:19.1.0'      // 하단 광고
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
